# blive-monitor

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extra/blive-proxy/: Cargo.toml
extra/blive-proxy/src/: info.rs  main.rs
extra/blive_proxy/: .gitignore  go.mod  main.go
extra/blive_proxy/blive/: conn.go  info.go
extra/blive_proxy/blive/codec/: codec.go  codec_test.go
extra/blive_proxy/blive/entity/: entity.go
extra/blive_proxy/proxy/: codec.go  coedc_test.go  handler.go  server.go
extra/blive_proxy/test_data/: danmu.json  danmu_info.json  main.py  room_info.json  superchat.json
src/main/: index.ts  preload.ts
src/renderer/: App.vue
src/renderer/api/: blive.ts  entity.ts  index.ts
src/renderer/components/: DanmuItem.vue  DanmuList.vue  GiftList.vue  Medal.vue  Monitor.vue  SuperchatItem.vue  SuperchatList.vue  Welcome.vue
src/renderer/router/: index.ts
src/renderer/stores/: danmu.ts  gift.ts  superchat.ts
src/renderer/views/: MonitorView.vue  WelcomeView.vue
